--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,23 @@
-# Node modules
+# Dependencies
 node_modules/
 
-# Vite build output
+# Build output
 dist/
 
-# Local environment files
-.env
-.env.local
-.env.*.local
-
-# Log files
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-# System files
-.DS_Store
-Thumbs.db
+# Local env files
+.env
+.env.local
 
 # Editor folders
 .vscode/
 .idea/
 
-# Temp folders
-*.temp
-*.cache
-.cache/
+# System files
+.DS_Store
+Thumbs.db
