--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "selectopharma-site",
   "version": "1.0.0",
   "private": true,
+   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
